# YouTube-RAG

./: .env.example  .gitignore  =4.0  PLAN.md  README.md  pyproject.toml
src/codetrading_rag/: __init__.py  cli.py  config.py  migration.py
src/codetrading_rag/channels/: __init__.py  manager.py
src/codetrading_rag/embeddings/: __init__.py  factory.py
src/codetrading_rag/gui/: __init__.py  app.py
src/codetrading_rag/ingest/: __init__.py  channel.py  processor.py  transcripts.py
src/codetrading_rag/llm/: __init__.py  backends.py
src/codetrading_rag/rag/: __init__.py  chain.py  prompts.py
src/codetrading_rag/vectorstore/: __init__.py  store.py
tests/: test_channels.py  test_config.py  test_ingest.py  test_rag.py
